--- a/redoc-template/index.html
+++ b/redoc-template/index.html
@@ -7,7 +7,8 @@
     <style>body { margin: 0; padding: 0; }</style>
 </head>
 <body>
-    <redoc spec-url="swagger.json"></redoc>
-    <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"></script>
+    <redoc spec-url="./swagger.json"></redoc>
+    
+    <script src="https://cdn.jsdelivr.net/npm/redoc@2.0.0-rc.70/bundles/redoc.standalone.js"></script>
 </body>
 </html>
